--- a/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
+++ b/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
@@ -1,6 +1,8 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls;assembly=WalletWasabi.Fluent">
+        xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls;assembly=WalletWasabi.Fluent"
+        xmlns:b="clr-namespace:WalletWasabi.Fluent.Behaviors">
   <Styles.Resources>
     <Thickness x:Key="TextControlBorderThemeThickness">0,0,0,2</Thickness>
     <Thickness x:Key="TextControlBorderThemeThicknessFocused">0,0,0,2</Thickness>
@@ -47,7 +49,8 @@
                                       Grid.Column="{TemplateBinding LeftColumn}"
                                       Background="Transparent"
                                       BorderThickness="0"
-                                      IsRightSide="{TemplateBinding IsConversionReversed}" />
+                                      IsRightSide="{TemplateBinding IsConversionReversed}">
+                  </c:CurrencyEntryBox>
 
                   <Button x:Name="PART_SwapButton" Focusable="False"
                           HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"
