--- a/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
+++ b/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
@@ -1,6 +1,8 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls;assembly=WalletWasabi.Fluent">
+        xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls;assembly=WalletWasabi.Fluent"
+        xmlns:b="clr-namespace:WalletWasabi.Fluent.Behaviors">
   <Styles.Resources>
     <Thickness x:Key="TextControlBorderThemeThickness">0,0,0,2</Thickness>
     <Thickness x:Key="TextControlBorderThemeThicknessFocused">0,0,0,2</Thickness>
@@ -74,6 +76,13 @@
           </Panel>
         </DockPanel>
       </ControlTemplate>
+    </Setter>
+    <Setter Property="(i:Interaction.Behaviors)">
+      <i:BehaviorCollectionTemplate>
+        <BehaviorCollection>
+          <b:AutoPasteAmountBehavior />
+        </BehaviorCollection>
+      </i:BehaviorCollectionTemplate>
     </Setter>
   </Style>
 
