--- a/WalletWasabi.Fluent/Views/Settings/GeneralSettingsTabView.axaml
+++ b/WalletWasabi.Fluent/Views/Settings/GeneralSettingsTabView.axaml
@@ -30,7 +30,7 @@
       <ToggleSwitch IsChecked="{Binding AutoCopy}" />
     </DockPanel>
 
-    <DockPanel ToolTip.Tip="Checks the clipboard for relevant information and pastes it automatically when required. Eg. Send amount and send address.">
+    <DockPanel ToolTip.Tip="Checks the clipboard for relevant information and pastes it automatically when required. Eg. Paste amount and paste address.">
       <TextBlock Text="Smart paste" />
       <ToggleSwitch IsChecked="{Binding AutoPaste}" />
     </DockPanel>
