--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
@@ -41,7 +41,7 @@
               ToolTip.Tip="Control your privacy"
               DockPanel.Dock="Right"
               Margin="10 0"
-              IsVisible="{Binding IsOtherPocketSelectionPossible}">
+              IsVisible="{Binding IsEditCoinsEnabled}">
         <Viewbox Height="20">
           <PathIcon Data="{StaticResource entities_edit_regular}" Foreground="{DynamicResource SystemAccentColor}" />
         </Viewbox>
