--- a/WalletWasabi.Fluent/Views/CoinSelection/Core/Cells/LabelsCellView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinSelection/Core/Cells/LabelsCellView.axaml
@@ -9,19 +9,24 @@
              x:DataType="cells:LabelsCellViewModel"
              x:CompileBindings="True">
 
+  <UserControl.Resources>
+    <SolidColorBrush x:Key="PrivacyLevelNoneBrush" Color="{DynamicResource TextForegroundColor}" />
+  </UserControl.Resources>
+
   <UserControl.Styles>
+
     <Style Selector="controls|LabelsItemsPresenter.NonPrivate">
-      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelNonPrivate}" />
-      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelNonPrivate}" />
+      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelNoneBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelNoneBrush}" />
     </Style>
     <Style Selector="controls|LabelsItemsPresenter.SemiPrivate">
-      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelSemiPrivate}" />
-      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelSemiPrivate}" />
+      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelMediumBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelMediumBrush}" />
       <Setter Property="MaxLabelWidth" Value="1000" />
     </Style>
     <Style Selector="controls|LabelsItemsPresenter.Private">
-      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelPrivate}" />
-      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelPrivate}" />
+      <Setter Property="BorderBrush" Value="{DynamicResource PrivacyLevelStrongBrush }" />
+      <Setter Property="Foreground" Value="{DynamicResource PrivacyLevelStrongBrush }" />
       <Setter Property="MaxLabelWidth" Value="1000" />
     </Style>
   </UserControl.Styles>
