--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
@@ -59,7 +59,7 @@
     <DockPanel>
 
       <ItemsControl Items="{Binding References}"
-                    DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="0 10 0 0">
+                    DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="0 10 0 0" Height="25">
         <ItemsControl.ItemsPanel>
           <ItemsPanelTemplate>
             <WrapPanel Orientation="Horizontal" />
