--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
@@ -1,8 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:i="using:Avalonia.Xaml.Interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             xmlns:ir="clr-namespace:Avalonia.Xaml.Interactions.Responsive;assembly=Avalonia.Xaml.Interactions"
              xmlns:c="using:WalletWasabi.Fluent.Controls"
              xmlns:behaviors="using:WalletWasabi.Fluent.Behaviors"
              xmlns:tiles="using:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
@@ -48,6 +49,14 @@
     <Style Selector="ListBoxItem:selected">
       <Setter Property="Background" Value="Red" />
     </Style>
+
+    <Style Selector="Carousel#Carousel">
+      <Setter Property="Width" Value="230" />
+    </Style>
+
+    <Style Selector="Carousel#Carousel.small">
+      <Setter Property="Width" Value="190" />
+    </Style>
   </UserControl.Styles>
   <c:ContentArea Title="{Binding Title}"
                  EnableNext="True" NextContent="Done"
@@ -89,6 +98,9 @@
           <behaviors:BoundsObserverBehavior Bounds="{Binding #Panel.Bounds, Mode=OneWay}"
                                             Width="{Binding Width, Mode=TwoWay}"
                                             Height="{Binding Height, Mode=TwoWay}" />
+          <ir:AdaptiveBehavior>
+            <ir:AdaptiveClassSetter MinHeight="0" MaxHeight="260" ClassName="small" TargetControl="{Binding #Carousel}" />
+          </ir:AdaptiveBehavior>
         </i:Interaction.Behaviors>
 
         <ListBox Items="{Binding Items}" ClipToBounds="False"
@@ -130,20 +142,21 @@
 
         <Carousel Items="{Binding PreviewItems}" IsVirtualized="False"
                   SelectedItem="{Binding SelectedItem, Mode=OneWay}"
-                  VerticalAlignment="Center" HorizontalAlignment="Center">
+                  VerticalAlignment="Center" HorizontalAlignment="Center"
+                  x:Name="Carousel">
           <Carousel.PageTransition>
             <CrossFade Duration="0.25" />
           </Carousel.PageTransition>
           <Carousel.DataTemplates>
             <DataTemplate DataType="{x:Type tiles:PrivacyControlTileViewModel}">
-              <ringView:PrivacyRingDetailsView IsEnabled="False" Height="90" Width="230">
+              <ringView:PrivacyRingDetailsView IsEnabled="False" VerticalAlignment="Center">
                 <i:Interaction.Behaviors>
                   <behaviors:FadeInBehavior InitialDelay="0:0:1" />
                 </i:Interaction.Behaviors>
               </ringView:PrivacyRingDetailsView>
             </DataTemplate>
             <DataTemplate DataType="{x:Type ring:PrivacyRingItemViewModel}">
-              <DockPanel Width="230" Height="90">
+              <DockPanel VerticalAlignment="Center">
                 <c:LabelsItemsPresenter Items="{Binding Coin.SmartLabel}" DockPanel.Dock="Top" HorizontalAlignment="Center" />
                 <StackPanel DockPanel.Dock="Bottom" Spacing="8">
                   <Separator />
@@ -160,11 +173,12 @@
                 </StackPanel>
 
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 3">
-                  <TextBlock
-                    VerticalAlignment="Center" HorizontalAlignment="Center"
-                    TextAlignment="Center"
-                    Text="{Binding AmountText}" Classes="h3" />
-
+                  <Viewbox>
+                    <TextBlock
+                      VerticalAlignment="Center" HorizontalAlignment="Center"
+                      TextAlignment="Center"
+                      Text="{Binding AmountText}" Classes="h3" />
+                  </Viewbox>
                   <TextBlock Text="{Binding Coin.Confirmations, StringFormat='Confirmations: {0}'}" Classes="h8" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </StackPanel>
               </DockPanel>
