--- a/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
+++ b/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
@@ -39,12 +39,12 @@
     <Setter Property="ItemTemplate">
       <DataTemplate>
         <Panel Margin="0 0 4 0">
-          <Border Classes="label" ToolTip.Tip="{Binding}" BorderBrush="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=c:LabelsItemsPresenter}, Path=BorderBrush}">
+          <Border Classes="label" ToolTip.Tip="{Binding}" BorderBrush="{Binding $parent[c:LabelsItemsPresenter].BorderBrush}">
             <TextBlock Text="{Binding}"
                        TextTrimming="CharacterEllipsis"
                        TextWrapping="NoWrap"
-                       Foreground="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=c:LabelsItemsPresenter}, Path=Foreground}"
-                       MaxWidth="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=c:LabelsItemsPresenter}, Path=MaxLabelWidth}" />
+                       Foreground="{Binding $parent[c:LabelsItemsPresenter].Foreground}"
+                       MaxWidth="{Binding $parent[c:LabelsItemsPresenter].MaxLabelWidth}" />
           </Border>
         </Panel>
       </DataTemplate>
@@ -54,7 +54,7 @@
         <c:LabelsPanel Orientation="Horizontal" Spacing="2" HorizontalAlignment="Left">
           <c:LabelsPanel.EllipsisControl>
             <Panel Margin="0 0 0 0">
-              <Border Classes="label" BorderBrush="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=c:LabelsItemsPresenter}, Path=BorderBrush}">
+              <Border Classes="label" BorderBrush="{Binding $parent[c:LabelsItemsPresenter].BorderBrush}">
                 <ToolTip.Tip>
                   <Panel>
                     <c:TagsBox IsReadOnly="True"
@@ -65,7 +65,7 @@
                 <TextBlock Text="..."
                            TextTrimming="CharacterEllipsis"
                            TextWrapping="NoWrap"
-                           Foreground="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=c:LabelsItemsPresenter}, Path=Foreground}"
+                           Foreground="{Binding $parent[c:LabelsItemsPresenter].Foreground}"
                            MaxWidth="120" />
               </Border>
             </Panel>
