--- a/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
@@ -64,7 +64,7 @@
                       <PathIcon Data="{StaticResource wallet_action_coinjoin}" />
                     </MenuItem.Icon>
                   </MenuItem>
-                  <MenuItem Header="Wallet Statistics" Command="{Binding WalletStatisticsCommand}">
+                  <MenuItem Header="Wallet Stats" Command="{Binding WalletStatsCommand}">
                     <MenuItem.Icon>
                       <PathIcon Data="{StaticResource stats_wallet_regular}" />
                     </MenuItem.Icon>
