--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -80,7 +80,7 @@
       <c:PreviewItem Icon="{StaticResource entities_regular}"
                      Label="Labels"
                      TextValue="{Binding Labels}">
-        <c:PrivacyContentControl NumberOfPrivacyChars="20">
+        <c:PrivacyContentControl NumberOfPrivacyChars="20" MinWidth="180" MinHeight="30" VerticalContentAlignment="Center">
           <c:LabelsItemsPresenter Items="{Binding Labels}" />
         </c:PrivacyContentControl>
       </c:PreviewItem>
