--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -26,8 +26,8 @@
       <c:PreviewItem Icon="{StaticResource btc_logo}"
                      Label="Amount"
                      TextValue="{Binding Amount}">
-        <c:PrivacyContentControl NumberOfPrivacyChars="9">
-          <TextBlock Text="{Binding Amount, StringFormat={}{0} BTC, Mode=OneWay}" Classes="monoSpaced" />
+        <c:PrivacyContentControl NumberOfPrivacyChars="9" MinHeight="18">
+          <TextBlock Text="{Binding Amount, StringFormat={}{0} BTC, Mode=OneWay}" Classes="monoSpaced" VerticalAlignment="Center" />
         </c:PrivacyContentControl>
       </c:PreviewItem>
 
@@ -51,8 +51,8 @@
       <c:PreviewItem Icon="{StaticResource transaction_id}"
                      Label="Transaction ID"
                      TextValue="{Binding TransactionId}">
-        <c:PrivacyContentControl NumberOfPrivacyChars="48">
-          <TextBlock Text="{Binding TransactionId}" Classes="monoSpaced" />
+        <c:PrivacyContentControl NumberOfPrivacyChars="61" MinHeight="18">
+          <TextBlock Text="{Binding TransactionId}" Classes="monoSpaced" VerticalAlignment="Center" />
         </c:PrivacyContentControl>
       </c:PreviewItem>
 
